# coherence-information

./: .gitignore  CITATION.cff  LICENSE  README.md  pre_registration.md  pyproject.toml
.github/workflows/: slow.yml  test.yml  very_slow.yml
cit/: induce.py  induce_multi.py  information.py
cit/ablations/: correlation_cluster.py  loo.py  loo_multi.py  shapley.py  shapley_multi.py
cit/data/: multi_feature.py  synthetic.py
cit/proxies/: compression_delta.py  compression_delta_multi.py  lempel_parsing.py  neural_prequential.py  ngram_mdl.py  predictive_logloss.py  predictive_logloss_multi.py
design/: multi_feature_substrate.md
tests/: test_cross_ablation_validation.py  test_cross_proxy_validation.py  test_induction_pipeline.py  test_multi_feature_substrate.py  test_shannon_recovery.py
