[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coherence-information"
version = "0.3.0"
description = "Open-source implementation of Coherence-Weighted Entropy and the Coherence Information Theory pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Benjamin James" }
]
keywords = [
    "coherence",
    "information-theory",
    "entropy",
    "coherence-weighted-entropy",
    "selective-compression",
    "recursive-coherence",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.26",
    "zstandard>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/benjaminjamesgit/coherence-information"
Repository = "https://github.com/benjaminjamesgit/coherence-information"

[tool.setuptools.packages.find]
include = ["cit*"]
exclude = ["tests*", "benchmarks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
